Updates to file storage logic

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "chat-with-files-frontend",
+  "name": "chat-with-file",
   "version": "0.1.0",
   "private": true,
   "type": "module",
