--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,16 +1,171 @@
-fastapi
-uvicorn
-langchain
-langchain-community
-langchain-ollama
-langchain_chroma
-chromadb
-sqlalchemy
-unstructured
-pydantic
-python-multipart
-# For file parsing
-python-docx
-pdfplumber
-# For CORS (if frontend is served separately)
-fastapi[all]
+aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.9.0
+asgiref==3.8.1
+attrs==25.3.0
+backoff==2.2.1
+bcrypt==4.3.0
+beautifulsoup4==4.13.4
+build==1.2.2.post1
+cachetools==5.5.2
+certifi==2025.4.26
+cffi==1.17.1
+chardet==5.2.0
+charset-normalizer==3.4.1
+chroma-hnswlib==0.7.6
+chromadb==0.6.3
+click==8.1.8
+coloredlogs==15.0.1
+cryptography==44.0.2
+dataclasses-json==0.6.7
+deprecated==1.2.18
+distro==1.9.0
+dnspython==2.7.0
+durationpy==0.9
+email-validator==2.2.0
+emoji==2.14.1
+eval-type-backport==0.2.2
+fastapi==0.115.9
+fastapi-cli==0.0.7
+filelock==3.18.0
+filetype==1.2.0
+flatbuffers==25.2.10
+frozenlist==1.6.0
+fsspec==2025.3.2
+google-auth==2.39.0
+googleapis-common-protos==1.70.0
+grpcio==1.71.0
+h11==0.16.0
+html5lib==1.1
+httpcore==1.0.9
+httptools==0.6.4
+httpx==0.28.1
+httpx-sse==0.4.0
+huggingface-hub==0.30.2
+humanfriendly==10.0
+idna==3.10
+importlib-metadata==8.6.1
+importlib-resources==6.5.2
+itsdangerous==2.2.0
+jinja2==3.1.6
+joblib==1.4.2
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
+kubernetes==32.0.1
+langchain==0.3.24
+langchain-chroma==0.2.3
+langchain-community==0.3.23
+langchain-core==0.3.56
+langchain-ollama==0.3.2
+langchain-text-splitters==0.3.8
+langdetect==1.0.9
+langsmith==0.3.38
+lxml==5.4.0
+markdown-it-py==3.0.0
+markupsafe==3.0.2
+marshmallow==3.26.1
+mdurl==0.1.2
+mmh3==5.1.0
+monotonic==1.6
+mpmath==1.3.0
+multidict==6.4.3
+mypy-extensions==1.1.0
+nest-asyncio==1.6.0
+networkx==3.4.2
+nltk==3.9.1
+numpy==2.2.5
+oauthlib==3.2.2
+olefile==0.47
+ollama==0.4.8
+onnxruntime==1.21.1
+opentelemetry-api==1.32.1
+opentelemetry-exporter-otlp-proto-common==1.32.1
+opentelemetry-exporter-otlp-proto-grpc==1.32.1
+opentelemetry-instrumentation==0.53b1
+opentelemetry-instrumentation-asgi==0.53b1
+opentelemetry-instrumentation-fastapi==0.53b1
+opentelemetry-proto==1.32.1
+opentelemetry-sdk==1.32.1
+opentelemetry-semantic-conventions==0.53b1
+opentelemetry-util-http==0.53b1
+orjson==3.10.16
+overrides==7.7.0
+packaging==24.2
+pdfminer-six==20250327
+pdfplumber==0.11.6
+pillow==11.2.1
+posthog==4.0.0
+propcache==0.3.1
+protobuf==5.29.4
+psutil==7.0.0
+pyasn1==0.6.1
+pyasn1-modules==0.4.2
+pycparser==2.22
+pydantic==2.11.3
+pydantic-core==2.33.1
+pydantic-extra-types==2.10.4
+pydantic-settings==2.9.1
+pygments==2.19.1
+pypdf==5.4.0
+pypdfium2==4.30.1
+pypika==0.48.9
+pyproject-hooks==1.2.0
+python-dateutil==2.9.0.post0
+python-docx==1.1.2
+python-dotenv==1.1.0
+python-iso639==2025.2.18
+python-magic==0.4.27
+python-multipart==0.0.20
+python-oxmsg==0.0.2
+pyyaml==6.0.2
+rapidfuzz==3.13.0
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==14.0.0
+rich-toolkit==0.14.3
+rpds-py==0.24.0
+rsa==4.9.1
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.2
+sentence-transformers==4.1.0
+setuptools==80.0.0
+shellingham==1.5.4
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.7
+sqlalchemy==2.0.40
+starlette==0.45.3
+sympy==1.14.0
+tenacity==9.1.2
+threadpoolctl==3.6.0
+tokenizers==0.21.1
+torch==2.7.0
+tqdm==4.67.1
+transformers==4.51.3
+typer==0.15.3
+typing-extensions==4.13.2
+typing-inspect==0.9.0
+typing-inspection==0.4.0
+ujson==5.10.0
+unstructured==0.17.2
+unstructured-client==0.34.0
+urllib3==2.4.0
+uvicorn==0.34.2
+uvloop==0.21.0
+watchfiles==1.0.5
+webencodings==0.5.1
+websocket-client==1.8.0
+websockets==15.0.1
+wrapt==1.17.2
+yarl==1.20.0
+zipp==3.21.0
+zstandard==0.23.0
