--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.12.0",
+    "react-markdown": "^10.1.0",
     "zustand": "^4.4.7"
   },
   "devDependencies": {
