--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,9 +23,11 @@
     "zustand": "^4.4.7"
   },
   "devDependencies": {
+    "@types/node": "^22.15.3",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.33.2",
