--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -21,13 +21,13 @@ click==8.1.8
 coloredlogs==15.0.1
 cryptography==44.0.2
 dataclasses-json==0.6.7
-deprecated==1.2.18
+Deprecated==1.2.18
 distro==1.9.0
 dnspython==2.7.0
 durationpy==0.9
-email-validator==2.2.0
+email_validator==2.2.0
 emoji==2.14.1
-eval-type-backport==0.2.2
+eval_type_backport==0.2.2
 fastapi==0.115.9
 fastapi-cli==0.0.7
 filelock==3.18.0
@@ -35,22 +35,30 @@ filetype==1.2.0
 flatbuffers==25.2.10
 frozenlist==1.6.0
 fsspec==2025.3.2
+google-ai-generativelanguage==0.6.18
+google-api-core==2.25.0rc1
+google-api-python-client==2.169.0
 google-auth==2.39.0
+google-auth-httplib2==0.2.0
+google-generativeai==0.8.5
 googleapis-common-protos==1.70.0
+greenlet==3.2.2
 grpcio==1.71.0
+grpcio-status==1.71.0
 h11==0.16.0
 html5lib==1.1
 httpcore==1.0.9
+httplib2==0.22.0
 httptools==0.6.4
 httpx==0.28.1
 httpx-sse==0.4.0
 huggingface-hub==0.30.2
 humanfriendly==10.0
 idna==3.10
-importlib-metadata==8.6.1
-importlib-resources==6.5.2
+importlib_metadata==8.6.1
+importlib_resources==6.5.2
 itsdangerous==2.2.0
-jinja2==3.1.6
+Jinja2==3.1.6
 joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==3.0.0
@@ -61,24 +69,39 @@ langchain==0.3.24
 langchain-chroma==0.2.3
 langchain-community==0.3.23
 langchain-core==0.3.56
+langchain-google-genai==2.1.4
 langchain-ollama==0.3.2
 langchain-text-splitters==0.3.8
 langdetect==1.0.9
 langsmith==0.3.38
 lxml==5.4.0
 markdown-it-py==3.0.0
-markupsafe==3.0.2
+MarkupSafe==3.0.2
 marshmallow==3.26.1
 mdurl==0.1.2
 mmh3==5.1.0
 monotonic==1.6
 mpmath==1.3.0
 multidict==6.4.3
-mypy-extensions==1.1.0
+mypy_extensions==1.1.0
 nest-asyncio==1.6.0
 networkx==3.4.2
 nltk==3.9.1
 numpy==2.2.5
+nvidia-cublas-cu12==12.6.4.1
+nvidia-cuda-cupti-cu12==12.6.80
+nvidia-cuda-nvrtc-cu12==12.6.77
+nvidia-cuda-runtime-cu12==12.6.77
+nvidia-cudnn-cu12==9.5.1.17
+nvidia-cufft-cu12==11.3.0.4
+nvidia-cufile-cu12==1.11.1.6
+nvidia-curand-cu12==10.3.7.77
+nvidia-cusolver-cu12==11.7.1.2
+nvidia-cusparse-cu12==12.5.4.2
+nvidia-cusparselt-cu12==0.6.3
+nvidia-nccl-cu12==2.26.2
+nvidia-nvjitlink-cu12==12.6.85
+nvidia-nvtx-cu12==12.6.77
 oauthlib==3.2.2
 olefile==0.47
 ollama==0.4.8
@@ -96,25 +119,27 @@ opentelemetry-util-http==0.53b1
 orjson==3.10.16
 overrides==7.7.0
 packaging==24.2
-pdfminer-six==20250327
+pdfminer.six==20250327
 pdfplumber==0.11.6
 pillow==11.2.1
 posthog==4.0.0
 propcache==0.3.1
+proto-plus==1.26.1
 protobuf==5.29.4
 psutil==7.0.0
 pyasn1==0.6.1
-pyasn1-modules==0.4.2
+pyasn1_modules==0.4.2
 pycparser==2.22
 pydantic==2.11.3
-pydantic-core==2.33.1
 pydantic-extra-types==2.10.4
 pydantic-settings==2.9.1
-pygments==2.19.1
+pydantic_core==2.33.1
+Pygments==2.19.1
+pyparsing==3.2.3
 pypdf==5.4.0
 pypdfium2==4.30.1
-pypika==0.48.9
-pyproject-hooks==1.2.0
+PyPika==0.48.9
+pyproject_hooks==1.2.0
 python-dateutil==2.9.0.post0
 python-docx==1.1.2
 python-dotenv==1.1.0
@@ -122,8 +147,8 @@ python-iso639==2025.2.18
 python-magic==0.4.27
 python-multipart==0.0.20
 python-oxmsg==0.0.2
-pyyaml==6.0.2
-rapidfuzz==3.13.0
+PyYAML==6.0.2
+RapidFuzz==3.13.0
 referencing==0.36.2
 regex==2024.11.6
 requests==2.32.3
@@ -142,7 +167,7 @@ shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.7
-sqlalchemy==2.0.40
+SQLAlchemy==2.0.40
 starlette==0.45.3
 sympy==1.14.0
 tenacity==9.1.2
@@ -151,13 +176,15 @@ tokenizers==0.21.1
 torch==2.7.0
 tqdm==4.67.1
 transformers==4.51.3
+triton==3.3.0
 typer==0.15.3
-typing-extensions==4.13.2
 typing-inspect==0.9.0
 typing-inspection==0.4.0
+typing_extensions==4.13.2
 ujson==5.10.0
 unstructured==0.17.2
 unstructured-client==0.34.0
+uritemplate==4.1.1
 urllib3==2.4.0
 uvicorn==0.34.2
 uvloop==0.21.0
